Añadimos las vistas principales

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,289 @@
-<h1>Hola mundo</h1>
+<body>
+
+<div class="wrapper">
+
+  <!--Barra lateral-->
+  <div class="sidebar" data-color="blue">
+
+    <div class="logo">
+      <h3>Mi Robotica</h3>
+    </div>
+
+    <div class="sidebar-wrapper">
+      <ul class="nav">
+      </ul>
+    </div>
+  </div>
+  <!-->
+
+  <div class="main-panel">
+
+    <div class="content" style="margin-top: 1px">
+      <div class="container-">
+
+        <h1 class="center-xs">Bienvenido de nuevo</h1><br>
+
+        <h3 class="col-md-12"><strong>Estos son los cursos que tenemos para ti:</strong></h3><br>
+
+        <div class="col-md col-md-12">
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="arduino">
+              <i class="material-icons"><%= image_tag "arduino-icon-2.png"%></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">Robotica Creativa con Arduino</h2>
+              <h4 class="category">Aprender todo acerca de Arduino y sus componentes.</h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="amazeing">
+              <i class="material-icons"><i class="material-icons"><%= image_tag "1-amezing.png"%></i></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">A-MAZE-ING con Arduino</h2>
+              <h4 class="category">¿Listo para la competencia? en este curso te enseñamos todo lo necesario para el reto
+                A-MAZE-ING y con esto seras capaz de participar en <strong>¡COMPETENCIAS MUNDIALES!</strong></h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="jousting">
+              <i class="material-icons"><%= image_tag "2-jousting.png"%></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">Jousting</h2>
+              <h4 class="category">¿Te imaginas que puedes combatir como los guerreros medievales con robots?, en el reto de
+                Jousting te decimos como hacer esto <strong>¡REALIDAD!</strong></h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="line">
+              <i class="material-icons"><%= image_tag "3-linefollow.png"%></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">Line Following</h2>
+              <h4 class="category">¿Quieres ser un campeon con el robot de seguidor de linea?, aqui te decimos como,  entra
+                y diviertete.</h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="ligther">
+              <i class="material-icons"><%= image_tag "4-lighter.png"%></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">Ligther than Air Vehicle</h2>
+              <h4 class="category">Surca los cielos con este reto, aprende como hacer un robot aereo de forma facil y
+                divertida.</h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="sumobot">
+              <i class="material-icons"><%= image_tag "5-sumobot.png"%></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">SumoBot</h2>
+              <h4 class="category">¿Robots que practican sumo?, asi es con este reto te enseñamos como construir tu propio
+                robot que lucha sumo, solo entra y aprende.</h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="iq">
+              <i class="material-icons"><%= image_tag "6-iqInnovate.png"%></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">Iq Innovative Robot</h2>
+              <h4 class="category">...</h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="robotovate">
+              <i class="material-icons"><%= image_tag "7-robotovate.png"%></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">Robotovate</h2>
+              <h4 class="category">...</h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="alpinebot">
+              <i class="material-icons"><%= image_tag "8-alpinebot.png"%></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">AlpineBot</h2>
+              <h4 class="category">Escala hasta la cima en cualquier campeonato de robotica, con este reto te mostramos
+                como llegar a la victoria.</h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+          <div class="card card-stats">
+            <div class="card-header" data-background-color="fire">
+              <i class="material-icons"><%= image_tag "9-firefighting.png"%></i>
+            </div>
+            <div class="card-content" style="margin: 8px; text-align: center">
+              <h2 class="title">Fire Fighting</h2>
+              <h4 class="category">En este reto te enseñamos como crear tu propio robot apaga velas, participa en uno de
+                los retos mas divertidos de la robotica.</h4>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons text-primary">update</i>  Ultima vez actualizado el: 14 de Junio de 2017
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="container-fluid">
+        <nav class="pull-left">
+          <ul>
+            <li>
+              <a href="#">
+                Home
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Company
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Portfolio
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Blog
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+  </div>
+
+  <%else%>
+
+  <!--Area de inicio de sesion/Visitantes-->
+  <!DOCTYPE html>
+  <html lang="utf8">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+      /* Remove the navbar's default margin-bottom and rounded borders */
+      .navbar {
+        margin-bottom: 0;
+        border-radius: 0;
+      }
+      img{
+        max-width: 100%;
+        height: auto;
+      }
+
+      /* Add a gray background color and some padding to the footer */
+      footer {
+        background-color: #f2f2f2;
+        padding: 25px;
+      }
+
+    </style>
+  </head>
+  <body>
+
+  <div class="jumbotron">
+    <div class="container text-center">
+      <%= image_tag "logo_mirobo.png"%>
+      <h1>BIENVENIDO A MI ROBOTICA</h1>
+      <p>¿Deseas inscribirte?</p>
+      <p>Manda tus datos al correo contacto@mirobotica.com y nos pondremos en contacto contigo.</p>
+
+      <%= link_to "Inciar sesion", class:"btn btn-xlarge", style:"font-size: 30px" %>
+      <%= link_to "Crear cuenta", class:"btn btn-xlarge",style:"font-size: 30px" %>
+    </div>
+  </div>
+
+  <footer class="container-fluid text-center">
+    <div class="col-md-12">
+      <%= image_tag "footerLogo.png"%>
+      <hr>
+
+    </div>
+    <div class="col-md-12">
+      <p>Todos los derechos reservados ® 2015</p>
+      <p>Sistema de Gestión para el Desarrollo del Talento
+        Estrategia y Desarrollo Organizacional S.C.</p>
+    </div>
+  </footer>
+
+  </body>
+  </html>
+  <!-->
+
+
+</div>
+
+</body>
+</html>
