--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,45 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width" />
+
+    <!--     Fonts and icons     -->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
+  <nav class="navbar navbar-info" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to root_path do %>
+            <%= image_tag "logo_mirobo.png", :size=> "70x70"%>
+        <%end%>
+      </div>
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav nav-bar-right">
+
+          <li class="active"><%= link_to "asignaturas",root_path %></li>
+          <li><a href="#">Comunicación</a></li>
+          <li><a href="#">Biblioteca</a></li>
+          <li>
+            <%= link_to "Cerrar sesión"%>
+          </li>
+              <li>
+                <%= link_to "Panel Administrador"%>
+              </li>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
     <%= yield %>
   </body>
 </html>
